# private-python-library-template

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: README.rst  pyproject.toml
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: __init__.py  hello.py
