[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py37']

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.module_name }}"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip"
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
packages = [
  { include = "{{ cookiecutter.module_name }}" }
]
exclude = [
  "*/tests/"
]
version = "0.0.0"
authors = []
description = "{{ cookiecutter.short_description }}"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]
readme = "README.rst"
homepage = "https://github.com/{{ cookiecutter.org_name }}/{{ cookiecutter.repo_name }}"
repository = "https://github.com/{{ cookiecutter.org_name }}/{{ cookiecutter.repo_name }}"
documentation = "https://{{ cookiecutter.repo_name }}.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.7.0,<4"
importlib_metadata = { version = ">=4", python = "~3.7" }

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "{{ cookiecutter.module_name }}/tests"
norecursedirs = ".venv"
